--- a/main.css
+++ b/main.css
@@ -143,8 +143,25 @@ a {
 	transform: scale(1.1);
 }
 
-.sticky .h-1-thumbnail {
+.h-1-thumbnail {
 	position: relative;
+}
+
+.h-1-thumbnail .h-1-categories {
+	position: absolute;
+	left: 20px;
+	bottom: 20px;
+	background-color: var(--primary-color);
+	padding: 2px 15px;
+	border-radius: 5px;
+}
+
+.nine-categories a {
+	color: var(--primary-text-color);
+}
+
+.nine-categories a:hover {
+	color: var(--primary-text-color);
 }
 
 .sticky .h-1-thumbnail::before {
@@ -202,10 +219,6 @@ a {
 	justify-content: space-around;
 }
 
-.format-video .h-1-thumbnail {
-	position: relative;
-}
-
 .format-video .h-1-thumbnail::after {
 	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 24 24'%3E%3Cpath fill='white' d='m10 15l5.19-3L10 9zm11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73'/%3E%3C/svg%3E");
 	position: absolute;
@@ -220,10 +233,6 @@ a {
 	right: 0;
 	bottom: 0;
 	box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 1px 3px 1px;
-}
-
-.format-gallery .h-1-thumbnail {
-	position: relative;
 }
 
 .format-gallery .h-1-thumbnail::after {
@@ -285,7 +294,6 @@ a {
 
 #sidebar {
 	position: sticky;
-	/* z-index: 9; */
 	top: 80px;
 }
 
@@ -309,7 +317,7 @@ a {
 	box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 1px 3px 1px;
 }
 
-.admin-bar #main-header{
+.admin-bar #main-header {
 	top: 32px;
 }
 
@@ -466,7 +474,14 @@ a {
 	background-color: #ffffff;
 	padding: 30px;
 	z-index: 999;
-	display: none;
+	opacity: 0;
+	transform: translateX(-100%);
+	transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.nine-menu-mobile.visible {
+	opacity: 1;
+	transform: translateX(0);
 }
 
 .nine-menu-header {
@@ -506,15 +521,17 @@ a {
 	top: 32px;
 }
 
-.admin-bar .offcanvas-full{
+.admin-bar .offcanvas-full {
 	top: 32px;
 }
 
-#wpadminbar{
+#wpadminbar {
 	z-index: 1;
 }
 
-
+.menu-icon, .close-icon {
+	cursor: pointer;
+}
 
 @media (max-width:800px) {
 	.site-main {
@@ -541,8 +558,17 @@ a {
 		height: 200px;
 	}
 
-	.nine-menu-mobile{
+	.nine-menu-mobile {
 		width: 100%;
+	}
+
+	.title a, .title {
+		font-size: 18px;
+	}
+
+	.s-1-post {
+		padding: 0;
+		margin: 0;
 	}
 }
 
@@ -576,8 +602,4 @@ a {
 		border-radius: 20px;
 		box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	}
-}
-
-.menu-icon , .close-icon{
-	cursor: pointer;
 }
