--- a/style-editor.css
+++ b/style-editor.css
@@ -2713,3 +2713,7 @@ ul.wp-block-latest-posts li, ul.wp-block-rss li, .widget_recent_entries ul li, .
 		padding-left: 15px;
 	}
 }
+
+.elementor-editor-active #sidebar{
+	display: none;
+}
