--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 Theme Name: Nine 
 Theme URI: https://tmrwstudio.live/atlas
 Author: VasuTheme
-Author URI: https://themeforest.net/user/tmrwstudio
+Author URI: https://themeforest.net/user/vasutheme
 Description: Atlas is a responsive Wordpress news, blog, magazine template. The user can use by especially magazine, blog & newspaper for online.
 Version: 1.6.0
 Requires at least: 6.0
