--- a/main.css
+++ b/main.css
@@ -361,6 +361,23 @@ a {
     margin-top: 10px;
 }
 
+
+.post-format-video {
+	position: relative;
+	padding-bottom: 56.25%;
+	/* 16:9 */
+	padding-top: 25px;
+	height: 0;
+  }
+  
+  .post-format-video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  }
+
 .dot {
     display: inline-block;
     width: 10px;
