--- a/style-editor.css
+++ b/style-editor.css
@@ -206,6 +206,7 @@ blockquote::before {
 	position: absolute;
 	left: 20px;
 	top: 10px;
+	text-align: center;
 }
 
 blockquote>p:last-of-type {
@@ -2388,12 +2389,12 @@ ul.wp-block-latest-posts li, ul.wp-block-rss li, .widget_recent_entries ul li, .
 }
 
 .wp-block-quote {
-	background-color: var(--fill-color);
+	/* background-color: var(--fill-color); */
 	border-left: none;
 	border-radius: 10px;
 	border-right: none;
-	margin-top: 10px;
-	padding: 25px;
+	margin-top: 20px;
+	padding: 10px 40px;
 }
 
 .wp-block-quote p {
@@ -2402,6 +2403,8 @@ ul.wp-block-latest-posts li, ul.wp-block-rss li, .widget_recent_entries ul li, .
 	line-height: inherit;
 	padding-top: 10px;
 	margin: 0;
+	font-weight: bold;
+	text-align: center;
 }
 
 .wp-block-quote.has-background {
