--- a/main.css
+++ b/main.css
@@ -362,21 +362,6 @@ a {
 }
 
 
-.post-format-video {
-	position: relative;
-	padding-bottom: 56.25%;
-	/* 16:9 */
-	padding-top: 25px;
-	height: 0;
-  }
-  
-  .post-format-video iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-  }
 
 .dot {
     display: inline-block;
@@ -700,8 +685,8 @@ a {
 	.site-main {
 		margin: 10px 10px;
 		padding: 5px;
-		display: flex;
-		flex-direction: column;
+		/* display: flex;
+		flex-direction: column; */
 	}
 
 	.site-main .h-1 {
@@ -743,7 +728,7 @@ a {
 	.site-main {
 		margin: 10px 10px;
 		padding: 5px;
-		display: flex;
+		/* display: flex; */
 	}
 }
 
@@ -769,4 +754,124 @@ a {
 		border-radius: 20px;
 		box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	}
+}
+
+
+video{
+	border-radius: 10px;
+	width: 100%;
+	height: 100%;
+}
+
+.post-grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.post-box {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.post-thumbnail img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+	border-radius: 15px;
+}
+
+.post-thumbnail {
+	position: relative;
+	
+}
+
+.post-category a{
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	color: var(--primary-text-color);
+	text-transform: uppercase;
+	padding: 2px 10px;
+	border-radius: 10px;
+	background: linear-gradient(286deg, rgba(242,237,162,1) 0%, rgba(255,136,0,1) 100%);
+		}
+
+
+.title {
+	background-image: linear-gradient(transparent calc(100% - 1px), currentColor 1px);
+	background-repeat: no-repeat;
+	background-size: 0 100%;
+	color: var(--primary-text);
+	line-height: 1.4;
+	margin: 0;
+	transition: background-size .3s;
+	font-size: 20px;
+}
+
+.title a {
+	background-image: linear-gradient(transparent calc(100% - 1px), currentColor 1px);
+	background-repeat: no-repeat;
+	background-size: 0 100%;
+	color: var(--primary-text);
+	line-height: 1.4;
+	margin: 0;
+	transition: background-size .3s;
+	font-size: 22px;
+}
+
+.title a:hover {
+	background-size: 100% 100%;
+	color: currentColor
+}
+
+
+
+
+.post-excerpt {
+    /* padding: 0 20px 20px; */
+    font-size: 1em;
+    color: var(--dis-color);
+}
+
+.post-meta-box {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background: var(--fill-color);
+    border-top: 1px solid #ddd;
+	border-radius: 10px;
+}
+
+.post-avatar {
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.post-author-name {
+    font-weight: bold;
+    color: #333;
+    text-decoration: none;
+}
+
+.post-author-name:hover {
+    text-decoration: underline;
+}
+
+.post-grid-container .post-date {
+    margin-left: auto;
+    color: var(--dis-color);
+}
+
+.archive-page-title{
+	margin: 20px 5px !important;
+	font-family: var(--primary_text-font-family);
+	font-size: 25px;
 }
