--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*
 Theme Name: Nine 
-Theme URI: https://tmrwstudio.live/atlas
+Theme URI: https://vasux.live/atlas
 Author: VasuTheme
 Author URI: https://themeforest.net/user/vasutheme
 Description: Atlas is a responsive Wordpress news, blog, magazine template. The user can use by especially magazine, blog & newspaper for online.
