--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 @charset "UTF-8";
 /*
 Theme Name: Nine 
-Theme URI: https://vasux.live/atlas
+Theme URI: https://vasux.xyz
 Author: VasuTheme
 Author URI: https://themeforest.net/user/vasutheme
-Description: Atlas is a responsive Wordpress news, blog, magazine template. The user can use by especially magazine, blog & newspaper for online.
+Description: Nine is a responsive Wordpress news, blog, magazine template. The user can use by especially magazine, blog & newspaper for online.
 Version: 1.6.0
 Requires at least: 6.0
 Tested up to: 6.4
 Requires PHP: 7.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: atlas
+Text Domain: nine
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
 
